[build-system]
requires = ["setuptools>=68.2.2", "wheel>=0.41.2"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = ""
authors = ["Your Name"]

[tool.pytest.ini_options]
pythonpath = ["."]
